--- a/reset.css
+++ b/reset.css
@@ -1,4 +1,5 @@
 /* https://coolors.co/bebbbb-444054-2f243a-fac9b8-db8a74 */ 
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@500&display=swap');
 *
 {
   margin: 0;
@@ -8,21 +9,25 @@
 
 html
 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Unbounded', cursive;
 }
 .row
 {
-  
+  margin-left: -8px;
+  margin-right: -8px;
+
 }
 .col
 {
-
-  padding: 8px 40px;
-  margin-left: 13vw;
-  margin-right: -12vw;
-  
-  
-  
+  padding: 0 8px ;   
+}
+.col-full
+{
+  width: 100%;
+}
+.col-half
+{
+  width: 50%;
 }
 .col-third
 {
